ckad/yaml/ckad-memlimit.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ckad-memlimit
