ckad/yaml/httpd-green.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: front-end
    release: green
  name: httpd-green
  namespace: ckad
spec:
  replicas: 2
  selector:
    matchLabels:
      app: front-end
      release: green
  template:
    metadata:
      labels:
        app: front-end
        release: green
    spec:
      containers:
      - image: lisenet/httpd-pii-demo:0.3
        imagePullPolicy: IfNotPresent
        name: httpd-pii-demo
        ports:
        - containerPort: 80
