ckad/yaml/mysql-pod-secret.yaml
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: mysql-pod-secret
  name: mysql-pod-secret
  namespace: ckad
spec:
  containers:
  - image: mysql:5.7
    imagePullPolicy: IfNotPresent
    name: mysql-pod-secret
