ckad/yaml/pod-use-sa.yaml
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: pod-use-sa
  name: pod-use-sa
  namespace: ckad
spec:
  serviceAccount: pod-sa
  serviceAccountName: pod-sa
  containers:
  - image: nginx:1.21
    imagePullPolicy: IfNotPresent
    name: pod-use-sa
