ckad/yaml/webapp-color.yaml
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: webapp-color
  name: webapp-color
  namespace: ckad
spec:
  containers:
  - image: kodekloud/webapp-color
    imagePullPolicy: IfNotPresent
    name: webapp-color
