ckad/yaml/httpd-blue-green.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: front-end
    release: blue
  name: httpd-blue-green
  namespace: ckad
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: front-end
    release: blue
